# House-of-Solana

./: .gitignore  ARCHITECTURE.md  Anchor.toml  LICENSE  README.md  package-lock.json  package.json
client/: README.md  package-lock.json  package.json
client/public/: casino.json
client/src/app/: globals.css  layout.tsx
client/src/app/api/ai-chat/: route.ts
client/src/app/game/: page.tsx
client/src/game/: GameCanvas.tsx  MobileControls.tsx  MobileOverlays.tsx  casino-map.ts  npc-ai.ts  player.ts  renderer.ts  tiledCasino.ts  useMobile.ts
client/src/games/blackjack/: BlackjackGame.tsx  index.ts
client/src/games/coin-toss/: CoinTossGame.tsx
client/src/games/factory/: AgentForge.tsx  FactoryGame.tsx  index.ts
client/src/games/multiplayer/: MultiplayerGame.tsx  index.ts
client/src/lib/: casino-idl.json  solana.ts  txlog.ts
frontend/: package.json
frontend/src/game/: GameCanvas.tsx  casino-map.ts  npc-ai.ts  player.ts  renderer.ts
frontend/src/games/blackjack/: BlackjackGame.tsx  index.ts
programs/house_of_solana/: Cargo.toml
programs/house_of_solana/src/: constants.rs  errors.rs  lib.rs  state.rs
programs/house_of_solana/src/factory/: executor.rs  gameplay.rs  mod.rs  multiplayer.rs  negotiation.rs  primitives.rs  state.rs  templates.rs
programs/house_of_solana/src/games/: blackjack.rs  coin_toss.rs  mod.rs
programs/house_of_solana/src/instructions/: chips.rs  delegation.rs  init.rs  mod.rs
tests/: test-blackjack-full.ts  test-blackjack.ts  test-factory.ts  test-multiplayer.ts  test-private-er.ts  test.ts
