[package]
name = "house_of_solana"
version = "0.1.0"
description = "House of Solana — on-chain casino with coin toss (VRF) on MagicBlock Private ERs"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "house_of_solana"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
ephemeral-rollups-sdk = { version = "0.6.5", features = ["anchor", "disable-realloc", "access-control"] }
ephemeral-vrf-sdk = { version = "0.2", features = ["anchor"] }
blake3 = "=1.5.5"
